--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "^8.1.0",
     "klaw": "^3.0.0",
     "lodash": "^4.17.15",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "queue-fifo": "^0.2.6"
   }
 }
